Agregando validaciones y mejoras visuales